# moz-youtube

./: README.md  pyproject.toml
docs/: conf.py  index.rst  modules.rst  moz_youtube.rst
examples/: example.py
scripts/: doc.sh
src/moz_youtube/: __init__.py  youtube.py  youtube_getter.py  youtube_new.py  youtube_updater.py  youtube_uploader.py
tests/moz_youtube/: test_video.py  test_youtube_getter.py  test_youtube_updater.py  test_youtube_uploader.py
