[tool.poetry]
name = "moz-youtube"
version = "0.1.0"
description = "mozkzki's youtube library"
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mozkzki/moz-youtube"
repository = "https://github.com/mozkzki/moz-youtube"
documentation = "https://github.com/mozkzki/moz-youtube/wiki"
keywords = ['sample', 'test']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Libraries',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.8"
oauth2client = "^4.1.3"
google-api-python-client = "^2.21.0"
google-auth-oauthlib = "^0.4.6"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
flake8 = "3.9.1"
mypy = "0.900"
pytest = "6.2.0"
black = "21.7b0"
pytest-cov = "2.12.1"
coverage = "5.5"
isort = "5.9.3"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
